# lambdata-pt5-unit1

./: .gitignore  Dockerfile  README.md  pyproject.toml
lambdata_pt5_primefactorx01/: __init__.py  helper.py  lambdata_pt5_primefactorx01.py
tests/: test_lambdata_pt5_primefactorx01.py
