[tool.poetry]
name = "lambdata-pt5-primefactorx01"
version = "0.1.3"
description = ""
authors = ["Erik Seguinte <erikseguinte@me.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
pandas = "^1.0"
numpy = "^1.18"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
